TestCPUInstructions fix path